--- a/src/styles/common/reset.scss
+++ b/src/styles/common/reset.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
-html {
-  background-color: #fff;
-  color: #000;
-  font-size: 12px
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, SimSun, sans-serif;
 }
 
-body,
 ul,
 ol,
 dl,
